--- a/wm-styles.styl
+++ b/wm-styles.styl
@@ -3,7 +3,13 @@ color-wm-content-background = #fff
 color-wm-border = #e4e4e4
 color-wm-border-before = #d5d5d5
 color-wm-border-after = #f8f8f8
+color-wm-button-background = #ddd
+color-wm-button = #222
 
+.webmentions-placeholder
+  .wm-placeholder
+    opacity: 0.75
+    font-style: italic
 .webmention
   margin: 16px 0
   font-size: 13px
@@ -101,3 +107,34 @@ color-wm-border-after = #f8f8f8
   .wm-meta
     border-bottom-left-radius: 4px
     border-bottom-right-radius: 4px
+.webmention-form-info
+  opacity: 0.75
+  margin: 40px 0 0
+.webmention-form
+  padding: 10px 0 0
+  display: grid
+  column-gap: 20px
+  align-items: center
+  grid-template: "label source submit"
+  grid-template-columns: max-content auto max-content
+  grid-template-rows: auto
+  input
+    padding: 10px 15px
+    border-radius: 2px
+  label
+    grid-area: label
+    opacity: 0.75
+  input[type=url]
+    grid-area: source
+    background-color: color-wm-content-background
+    border-width: 1px
+    border-style: solid
+    border-color: color-wm-border
+    &:focus
+      outline: none
+  input[type=submit]
+    grid-area: submit
+    cursor: pointer
+    color: color-wm-button
+    border: none
+    background-color: color-wm-button-background
