--- a/wm-styles.styl
+++ b/wm-styles.styl
@@ -116,6 +116,7 @@ mq-mobile = "screen and (max-width: 479px)"
   padding: 10px 0 0
   display: grid
   column-gap: 20px
+  row-gap: 10px
   align-items: center
   grid-template: "label source submit"
   grid-template-columns: max-content auto max-content
